# Computer-Vision

./: README.md
Projects/Camera calibration/: CMakeLists.txt  HM2_CV.cpp
Projects/Denoising/: CMakeLists.txt  HM3_CV.cpp  filter.cpp  filter.h  show_histogram_function.cpp
Projects/Object recognition/: CMakeLists.txt
Projects/Object recognition/src/: HM6_CV.cpp  ObjDect.cpp  ObjDect.h
Projects/Plate recognition/: ExamClass.cpp  ExamClass.h  ExamClassPlates.cpp  ExamClassPlates.h  LabExam.cpp  classifications.xml  images.xml
